kube/client/client-blue-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: client-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meal-tracker
      task: client
      role: blue
  template:
    metadata:
      labels:
        app: meal-tracker
        task: client
        role: blue
    spec:
      containers:
      - name: client
        image: normak458/meal-tracker_client:v0.0.2
        imagePullPolicy: Always #Always #IfNotPresent
        ports:
        - containerPort: 80
        stdin: true
      restartPolicy: Always
      volumes: null
