kube/client/client-green-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: client-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meal-tracker
      task: client
      role: green
  template:
    metadata:
      labels:
        app: meal-tracker
        task: client
        role: green
    spec:
      containers:
      - name: client
        image: normak458/meal-tracker_client:latest
        imagePullPolicy: Always #Always #IfNotPresent
        ports:
        - containerPort: 80
        stdin: true
      restartPolicy: Always
      volumes: null
