kube/client/client.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: meal-tracker
    task: client
    role: green

---
