kube/client/client-blue-service.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: clientingressroute-blue
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`kameron.io`) && PathPrefix(`/apps/nutri`)
    kind: Rule
    services:
    - name: client-blue
      port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: client-blue
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: meal-tracker
    task: client
    role: blue

---
